--- a/main_code_android/app/src/main/res/layout/activity_feature_template.xml
+++ b/main_code_android/app/src/main/res/layout/activity_feature_template.xml
@@ -46,8 +46,8 @@
 			android:rotation="270"
 			android:text="@string/template_feature_title_long"
 			android:textColor="@color/verticalTitleColor"
-			android:textSize="32dp"
-			android:textStyle="bold"/>
+			android:textSize="26dp"
+			android:textStyle="bold" />
 
 		<TextView
 			android:id="@+id/battery"
@@ -127,10 +127,196 @@
 						android:layout_height="match_parent"
 						android:freezesText="true"
 						android:gravity="bottom"
-						android:text="@string/template_unit_bpm"/>
+						android:text="@string/template_unit"/>
 				</TableRow>
 
 			</TableLayout>
+
+			<TableLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:padding="@dimen/feature_section_padding">
+
+				<TableRow
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content">
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:layout_width="0dp"
+						android:layout_height="match_parent"
+						android:layout_weight="1"
+						android:gravity="center_vertical"
+						android:text="@string/template_value_title_1"/>
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:id="@+id/value1"
+						android:layout_width="wrap_content"
+						android:layout_height="match_parent"
+						android:freezesText="true"
+						android:gravity="right"
+						android:text="@string/not_available_value"
+						android:textSize="36sp"/>
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:id="@+id/value_unit1"
+						android:layout_width="45dp"
+						android:layout_height="match_parent"
+						android:freezesText="true"
+						android:gravity="bottom"
+						android:text="@string/template_unit_1"/>
+				</TableRow>
+
+			</TableLayout>
+
+
+			<TableLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:padding="@dimen/feature_section_padding">
+
+				<TableRow
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content">
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:layout_width="0dp"
+						android:layout_height="match_parent"
+						android:layout_weight="1"
+						android:gravity="center_vertical"
+						android:text="@string/template_value_title_2"/>
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:id="@+id/value2"
+						android:layout_width="wrap_content"
+						android:layout_height="match_parent"
+						android:freezesText="true"
+						android:gravity="right"
+						android:text="@string/not_available_value"
+						android:textSize="36sp"/>
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:id="@+id/value_unit2"
+						android:layout_width="45dp"
+						android:layout_height="match_parent"
+						android:freezesText="true"
+						android:gravity="bottom"
+						android:text="@string/template_unit_2"/>
+				</TableRow>
+
+			</TableLayout>
+
+
+			<TableLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:padding="@dimen/feature_section_padding">
+
+				<TableRow
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content">
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:layout_width="0dp"
+						android:layout_height="match_parent"
+						android:layout_weight="1"
+						android:gravity="center_vertical"
+						android:text="@string/template_value_title_3"/>
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:id="@+id/value3"
+						android:layout_width="wrap_content"
+						android:layout_height="match_parent"
+						android:freezesText="true"
+						android:gravity="right"
+						android:text="@string/not_available_value"
+						android:textSize="36sp"/>
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:id="@+id/value_unit3"
+						android:layout_width="45dp"
+						android:layout_height="match_parent"
+						android:freezesText="true"
+						android:gravity="bottom"
+						android:text="@string/template_unit_3"/>
+				</TableRow>
+
+			</TableLayout>
+
+
+			<TableLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:padding="@dimen/feature_section_padding">
+
+				<TableRow
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content">
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:layout_width="0dp"
+						android:layout_height="match_parent"
+						android:layout_weight="1"
+						android:gravity="center_vertical"
+						android:text="@string/template_value_title_4"/>
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:id="@+id/value4"
+						android:layout_width="wrap_content"
+						android:layout_height="match_parent"
+						android:freezesText="true"
+						android:gravity="right"
+						android:text="@string/not_available_value"
+						android:textSize="36sp"/>
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:id="@+id/value_unit4"
+						android:layout_width="45dp"
+						android:layout_height="match_parent"
+						android:freezesText="true"
+						android:gravity="bottom"
+						android:text="@string/template_unit_4"/>
+				</TableRow>
+
+			</TableLayout>
+
+
+			<TableLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:padding="@dimen/feature_section_padding">
+
+				<TableRow
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content">
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:layout_width="0dp"
+						android:layout_height="match_parent"
+						android:layout_weight="1"
+						android:gravity="center_vertical"
+						android:text="@string/template_value_title_5"/>
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:id="@+id/value5"
+						android:layout_width="wrap_content"
+						android:layout_height="match_parent"
+						android:freezesText="true"
+						android:gravity="right"
+						android:text="@string/not_available_value"
+						android:textSize="36sp"/>
+
+					<androidx.appcompat.widget.AppCompatTextView
+						android:id="@+id/value_unit5"
+						android:layout_width="45dp"
+						android:layout_height="match_parent"
+						android:freezesText="true"
+						android:gravity="bottom"
+						android:text="@string/template_unit_5"/>
+				</TableRow>
+
+			</TableLayout>
+
+
 		</LinearLayout>
 
 		<com.google.android.material.button.MaterialButton
