--- a/main_code_android/app/src/main/res/layout/activity_feature_template.xml
+++ b/main_code_android/app/src/main/res/layout/activity_feature_template.xml
@@ -327,14 +327,31 @@
 		</ScrollView>
 
 		<com.google.android.material.button.MaterialButton
-			android:id="@+id/action_set_name"
+			android:id="@+id/action_read"
 			style="@style/Widget.MaterialComponents.Button"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_alignParentLeft="true"
+			android:layout_marginLeft="@dimen/feature_horizontal_margin"
+			android:layout_marginTop="@dimen/feature_device_name_margin_top"
 			android:layout_above="@id/action_connect"
 			android:layout_centerHorizontal="true"
-			android:text="@string/template_action"
+			android:text="@string/template_action_read"
 			app:backgroundTint="@color/nordicLake" />
+
+		<com.google.android.material.button.MaterialButton
+			android:id="@+id/action_write"
+			style="@style/Widget.MaterialComponents.Button"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_alignParentRight="true"
+			android:layout_marginRight="@dimen/feature_horizontal_margin"
+			android:layout_marginTop="@dimen/feature_device_name_margin_top"
+			android:layout_above="@id/action_connect"
+			android:layout_centerHorizontal="true"
+			android:text="@string/template_action_write"
+			app:backgroundTint="@color/nordicLake" />
+
 
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/action_connect"
