--- a/main_code_android/app/src/main/res/values/strings_template.xml
+++ b/main_code_android/app/src/main/res/values/strings_template.xml
@@ -28,7 +28,8 @@
 	<dimen name="template_feature_title_long_margin">-62dp</dimen>
 
 	<string name="template_default_name">DEFAULT DEVICE</string>
-	<string name="template_action">An action</string>
+	<string name="template_action_read">Read</string>
+	<string name="template_action_write">Write</string>
 	<string name="template_section_header">Values</string>
 	<string name="template_value_title">Index</string>
 	<string name="template_unit">[ind]</string>
