--- a/main_code_android/app/src/main/res/layout/activity_feature_template.xml
+++ b/main_code_android/app/src/main/res/layout/activity_feature_template.xml
@@ -119,7 +119,7 @@
 							android:text="@string/template_value_title" />
 
 						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value"
+							android:id="@+id/value0"
 							android:layout_width="wrap_content"
 							android:layout_height="match_parent"
 							android:freezesText="true"
