Clean STAT communication logic for android
Now before to send a command from the phone, the phone app read the STAT
characteristic and then toggles the command from phone variable.

--- a/main_code_android/app/src/main/res/values/strings_template.xml
+++ b/main_code_android/app/src/main/res/values/strings_template.xml
@@ -29,7 +29,7 @@
 
 	<string name="template_default_name">DEFAULT DEVICE</string>
 	<string name="template_action_read">Read</string>
-	<string name="template_action_write">Write</string>
+	<string name="template_action_write">Command</string>
 	<string name="template_section_header">Values</string>
 	<string name="template_value_title">Index</string>
 	<string name="template_unit">[ind]</string>
