Clean STAT characteristic buttons for android
Now, the button to write the STAT characteristic changes its text
dinamically depending on the STAT characteristic previously read.

--- a/main_code_android/app/src/main/res/layout/activity_feature_template.xml
+++ b/main_code_android/app/src/main/res/layout/activity_feature_template.xml
@@ -340,7 +340,7 @@
 			app:backgroundTint="@color/nordicLake" />
 
 		<com.google.android.material.button.MaterialButton
-			android:id="@+id/action_write"
+			android:id="@+id/action_write_characteristic_stat"
 			style="@style/Widget.MaterialComponents.Button"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
