--- a/main_code_android/app/src/main/res/values/strings_template.xml
+++ b/main_code_android/app/src/main/res/values/strings_template.xml
@@ -28,8 +28,11 @@
 	<dimen name="template_feature_title_long_margin">-62dp</dimen>
 
 	<string name="template_default_name">DEFAULT DEVICE</string>
-	<string name="template_action_read">Read</string>
+	<string name="template_action_read">Update</string>
 	<string name="template_action_write">Command</string>
+	<string name="template_action_write_start">Start</string>
+	<string name="template_action_write_wait">Wait</string>
+	<string name="template_action_write_stop">Stop</string>
 	<string name="template_section_header">Values</string>
 	<string name="template_value_title">Index</string>
 	<string name="template_unit">[ind]</string>
