--- a/main_code_android/app/src/main/res/layout/activity_feature_template.xml
+++ b/main_code_android/app/src/main/res/layout/activity_feature_template.xml
@@ -101,7 +101,91 @@
 					style="@style/Widget.ListTitle"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:text="@string/template_section_header" />
+					android:text="Control System" />
+
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:orientation="horizontal">
+
+					<TextView
+						android:id="@+id/textViewContTime"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						android:text="TIME" />
+
+					<TextView
+						android:id="@+id/textViewContRef"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						android:text="REF" />
+
+					<TextView
+						android:id="@+id/textViewContAdc"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						android:text="ADC" />
+
+					<TextView
+						android:id="@+id/textViewContPwm"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						android:text="PWM" />
+
+				</LinearLayout>
+
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:orientation="horizontal">
+
+					<TextView
+						android:id="@+id/textViewCont0"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="24" />
+
+					<TextView
+						android:id="@+id/textViewCont1"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="768" />
+
+					<TextView
+						android:id="@+id/textViewCont2"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="770" />
+
+					<TextView
+						android:id="@+id/textViewCont3"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="65" />
+				</LinearLayout>
+
+				<androidx.appcompat.widget.AppCompatTextView
+					style="@style/Widget.ListTitle"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/activity_horizontal_margin"
+					android:text="Detection System" />
 
 				<TableLayout
 					android:layout_width="match_parent"
@@ -285,7 +369,6 @@
 					</TableRow>
 
 				</TableLayout>
-
 
 				<TableLayout
 					android:layout_width="match_parent"
