--- a/main_code_android/app/src/main/res/layout/activity_feature_template.xml
+++ b/main_code_android/app/src/main/res/layout/activity_feature_template.xml
@@ -101,6 +101,197 @@
 					style="@style/Widget.ListTitle"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
+					android:text="Battery System" />
+
+
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:orientation="horizontal">
+
+
+					<LinearLayout
+						android:layout_width="0dp"
+						android:layout_height="match_parent"
+						android:layout_weight="1"
+						android:orientation="vertical">
+
+
+						<TextView
+							android:id="@+id/textViewBattTime"
+							android:layout_width="match_parent"
+							android:layout_height="0dp"
+							android:layout_weight="1"
+							android:gravity="bottom|center_horizontal"
+							android:text="Time" />
+
+						<TextView
+							android:id="@+id/textViewBatt0"
+							android:layout_width="match_parent"
+							android:layout_height="0dp"
+							android:layout_weight="1"
+							android:gravity="center_horizontal|top"
+							tools:text="0" />
+					</LinearLayout>
+
+					<LinearLayout
+						android:layout_width="0dp"
+						android:layout_height="match_parent"
+						android:layout_weight="3"
+						android:orientation="vertical">
+
+						<LinearLayout
+							android:layout_width="match_parent"
+							android:layout_height="0dp"
+							android:layout_weight="2"
+							android:orientation="horizontal">
+
+							<TextView
+								android:id="@+id/textViewBattSoc"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="SOC" />
+
+							<TextView
+								android:id="@+id/textViewBattCapRem"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="capRem" />
+
+							<TextView
+								android:id="@+id/textViewBattCapFull"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="capFull" />
+
+							<TextView
+								android:id="@+id/textViewBattSoh"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="SOH" />
+
+						</LinearLayout>
+
+						<LinearLayout
+							android:layout_width="match_parent"
+							android:layout_height="0dp"
+							android:layout_weight="2"
+							android:orientation="horizontal">
+
+							<TextView
+								android:id="@+id/textViewBatt1"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								tools:text="94" />
+
+							<TextView
+								android:id="@+id/textViewBatt2"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								tools:text="33" />
+
+							<TextView
+								android:id="@+id/textViewBatt3"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								tools:text="40" />
+
+							<TextView
+								android:id="@+id/textViewBatt4"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								tools:text="86" />
+
+						</LinearLayout>
+
+						<LinearLayout
+							android:layout_width="match_parent"
+							android:layout_height="0dp"
+							android:layout_weight="3"
+							android:gravity="bottom"
+							android:orientation="horizontal">
+
+							<TextView
+								android:id="@+id/textViewBattVol"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="Voltage" />
+
+							<TextView
+								android:id="@+id/textViewBattCur"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="Current" />
+
+							<TextView
+								android:id="@+id/textViewBattPow"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="Power" />
+						</LinearLayout>
+
+						<LinearLayout
+							android:layout_width="match_parent"
+							android:layout_height="0dp"
+							android:layout_weight="2"
+							android:orientation="horizontal">
+
+							<TextView
+								android:id="@+id/textViewBatt5"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								tools:text="3853" />
+
+							<TextView
+								android:id="@+id/textViewBatt6"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								tools:text="0" />
+
+							<TextView
+								android:id="@+id/textViewBatt7"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								tools:text="0" />
+						</LinearLayout>
+
+					</LinearLayout>
+
+				</LinearLayout>
+
+				<androidx.appcompat.widget.AppCompatTextView
+					style="@style/Widget.ListTitle"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/activity_horizontal_margin"
 					android:text="Control System" />
 
 				<LinearLayout
