--- a/main_code_android/app/src/main/res/layout/activity_feature_template.xml
+++ b/main_code_android/app/src/main/res/layout/activity_feature_template.xml
@@ -378,225 +378,279 @@
 					android:layout_marginTop="@dimen/activity_horizontal_margin"
 					android:text="Detection System" />
 
-				<TableLayout
+				<LinearLayout
 					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:padding="@dimen/feature_section_padding">
+					android:layout_height="match_parent"
+					android:orientation="horizontal">
 
-					<TableRow
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content">
+					<TextView
+						android:id="@+id/textViewSensInd"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						android:text="Ind" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:layout_width="0dp"
-							android:layout_height="match_parent"
-							android:layout_weight="1"
-							android:gravity="center_vertical"
-							android:text="@string/template_value_title" />
+					<TextView
+						android:id="@+id/textViewSensTime"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						android:text="Time" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value0"
-							android:layout_width="wrap_content"
-							android:layout_height="match_parent"
-							android:freezesText="true"
-							android:gravity="right"
-							android:text="@string/not_available_value"
-							android:textSize="36sp" />
+					<TextView
+						android:id="@+id/textViewSensMosBefore"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						android:text="Led0" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value_unit"
-							android:layout_width="45dp"
-							android:layout_height="match_parent"
-							android:freezesText="true"
-							android:gravity="bottom"
-							android:text="@string/template_unit" />
-					</TableRow>
+					<TextView
+						android:id="@+id/textViewSensMosAfter"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						android:text="Led1" />
 
-				</TableLayout>
+					<TextView
+						android:id="@+id/textViewSensAdcBefore"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						android:text="Adc0" />
 
-				<TableLayout
+					<TextView
+						android:id="@+id/textViewSensAdcAfter"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						android:text="Adc1" />
+				</LinearLayout>
+
+				<LinearLayout
 					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:padding="@dimen/feature_section_padding">
+					android:layout_height="match_parent"
+					android:orientation="horizontal">
 
-					<TableRow
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content">
+					<TextView
+						android:id="@+id/textViewSens00"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="0" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:layout_width="0dp"
-							android:layout_height="match_parent"
-							android:layout_weight="1"
-							android:gravity="center_vertical"
-							android:text="@string/template_value_title_1" />
+					<TextView
+						android:id="@+id/textViewSens01"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						tools:text="120" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value1"
-							android:layout_width="wrap_content"
-							android:layout_height="match_parent"
-							android:freezesText="true"
-							android:gravity="right"
-							android:text="@string/not_available_value"
-							android:textSize="36sp" />
+					<TextView
+						android:id="@+id/textViewSens02"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="0" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value_unit1"
-							android:layout_width="45dp"
-							android:layout_height="match_parent"
-							android:freezesText="true"
-							android:gravity="bottom"
-							android:text="@string/template_unit_1" />
-					</TableRow>
+					<TextView
+						android:id="@+id/textViewSens03"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="1" />
 
-				</TableLayout>
+					<TextView
+						android:id="@+id/textViewSens04"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						tools:text="24" />
 
+					<TextView
+						android:id="@+id/textViewSens05"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						tools:text="1427" />
 
-				<TableLayout
+				</LinearLayout>
+
+				<LinearLayout
 					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:padding="@dimen/feature_section_padding">
+					android:layout_height="match_parent"
+					android:orientation="horizontal">
 
-					<TableRow
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content">
+					<TextView
+						android:id="@+id/textViewSens10"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="1" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:layout_width="0dp"
-							android:layout_height="match_parent"
-							android:layout_weight="1"
-							android:gravity="center_vertical"
-							android:text="@string/template_value_title_2" />
+					<TextView
+						android:id="@+id/textViewSens11"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						tools:text="121" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value2"
-							android:layout_width="wrap_content"
-							android:layout_height="match_parent"
-							android:freezesText="true"
-							android:gravity="right"
-							android:text="@string/not_available_value"
-							android:textSize="36sp" />
+					<TextView
+						android:id="@+id/textViewSens12"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="0" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value_unit2"
-							android:layout_width="45dp"
-							android:layout_height="match_parent"
-							android:freezesText="true"
-							android:gravity="bottom"
-							android:text="@string/template_unit_2" />
-					</TableRow>
+					<TextView
+						android:id="@+id/textViewSens13"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="1" />
 
-				</TableLayout>
+					<TextView
+						android:id="@+id/textViewSens14"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						tools:text="23" />
 
+					<TextView
+						android:id="@+id/textViewSens15"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						tools:text="1424" />
 
-				<TableLayout
+				</LinearLayout>
+
+				<LinearLayout
 					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:padding="@dimen/feature_section_padding">
+					android:layout_height="match_parent"
+					android:orientation="horizontal">
 
-					<TableRow
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content">
+					<TextView
+						android:id="@+id/textViewSens20"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="2" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:layout_width="0dp"
-							android:layout_height="match_parent"
-							android:layout_weight="1"
-							android:gravity="center_vertical"
-							android:text="@string/template_value_title_3" />
+					<TextView
+						android:id="@+id/textViewSens21"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						tools:text="122" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value3"
-							android:layout_width="wrap_content"
-							android:layout_height="match_parent"
-							android:freezesText="true"
-							android:gravity="right"
-							android:text="@string/not_available_value"
-							android:textSize="36sp" />
+					<TextView
+						android:id="@+id/textViewSens22"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="0" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value_unit3"
-							android:layout_width="45dp"
-							android:layout_height="match_parent"
-							android:freezesText="true"
-							android:gravity="bottom"
-							android:text="@string/template_unit_3" />
-					</TableRow>
+					<TextView
+						android:id="@+id/textViewSens23"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="1" />
 
-				</TableLayout>
+					<TextView
+						android:id="@+id/textViewSens24"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						tools:text="26" />
 
+					<TextView
+						android:id="@+id/textViewSens25"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						tools:text="1425" />
 
-				<TableLayout
+				</LinearLayout>
+
+				<LinearLayout
 					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:padding="@dimen/feature_section_padding">
+					android:layout_height="match_parent"
+					android:orientation="horizontal">
 
-					<TableRow
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content">
+					<TextView
+						android:id="@+id/textViewSens30"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="3" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:layout_width="0dp"
-							android:layout_height="match_parent"
-							android:layout_weight="1"
-							android:gravity="center_vertical"
-							android:text="@string/template_value_title_4" />
+					<TextView
+						android:id="@+id/textViewSens31"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						tools:text="123" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value4"
-							android:layout_width="wrap_content"
-							android:layout_height="match_parent"
-							android:freezesText="true"
-							android:gravity="right"
-							android:text="@string/not_available_value"
-							android:textSize="36sp" />
+					<TextView
+						android:id="@+id/textViewSens32"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="0" />
 
-						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value_unit4"
-							android:layout_width="45dp"
-							android:layout_height="match_parent"
-							android:freezesText="true"
-							android:gravity="bottom"
-							android:text="@string/template_unit_4" />
-					</TableRow>
+					<TextView
+						android:id="@+id/textViewSens33"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="1" />
 
-				</TableLayout>
+					<TextView
+						android:id="@+id/textViewSens34"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						tools:text="25" />
 
-				<TableLayout
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:padding="@dimen/feature_section_padding">
+					<TextView
+						android:id="@+id/textViewSens35"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:gravity="center"
+						tools:text="1426" />
 
-					<TableRow
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content">
-
-						<androidx.appcompat.widget.AppCompatTextView
-							android:layout_width="0dp"
-							android:layout_height="match_parent"
-							android:layout_weight="1"
-							android:gravity="center_vertical"
-							android:text="@string/template_value_title_5" />
-
-						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value5"
-							android:layout_width="wrap_content"
-							android:layout_height="match_parent"
-							android:freezesText="true"
-							android:gravity="right"
-							android:text="@string/not_available_value"
-							android:textSize="36sp" />
-
-						<androidx.appcompat.widget.AppCompatTextView
-							android:id="@+id/value_unit5"
-							android:layout_width="45dp"
-							android:layout_height="match_parent"
-							android:freezesText="true"
-							android:gravity="bottom"
-							android:text="@string/template_unit_5" />
-					</TableRow>
-
-				</TableLayout>
-
+				</LinearLayout>
 
 			</LinearLayout>
 		</ScrollView>
