Plot SENS, CONT and BATT data in the PlotActivity
Now it's plotted the data saved in the files "_measure.txt",
"_control.txt" and "_battery.txt" in the PlotActivity. Note that there
was a little bug, when the nordic sent the last battery data, its time
was 0, this was changed in the nRF52 code by simply changing the time
value at the end when the "seconds" timer is stopped.

--- a/main_code_android/app/src/main/res/layout/activity_plot.xml
+++ b/main_code_android/app/src/main/res/layout/activity_plot.xml
@@ -67,15 +67,40 @@
 				android:orientation="vertical">
 
 				<androidx.appcompat.widget.AppCompatTextView
-					android:id="@+id/titleGraphViewDetectionSystem"
+					android:id="@+id/titleGraphViewMeasureSystem"
+					style="@style/Widget.ListTitle"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="Graph Dectection System" />
+
+				<com.jjoe64.graphview.GraphView
+					android:id="@+id/graphViewMeasureSystem"
+					android:layout_width="match_parent"
+					android:layout_height="160dp" />
+
+				<androidx.appcompat.widget.AppCompatTextView
+					android:id="@+id/titleGraphViewControlSystem"
 					style="@style/Widget.ListTitle"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_marginTop="@dimen/activity_horizontal_margin"
-					android:text="Graph Dectection System" />
+					android:text="Graph Control System" />
 
 				<com.jjoe64.graphview.GraphView
-					android:id="@+id/graphViewDetectionSystem"
+					android:id="@+id/graphViewControlSystem"
+					android:layout_width="match_parent"
+					android:layout_height="160dp" />
+
+				<androidx.appcompat.widget.AppCompatTextView
+					android:id="@+id/titleGraphViewBatterySystem"
+					style="@style/Widget.ListTitle"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/activity_horizontal_margin"
+					android:text="Graph Battery System" />
+
+				<com.jjoe64.graphview.GraphView
+					android:id="@+id/graphViewBatterySystem"
 					android:layout_width="match_parent"
 					android:layout_height="160dp" />
 
