Changes for feather nRF52 hardware
Some pin assignation was changes. Be Aware! some changes of the pins
were made in the pca10056 file wich is not included in this git project.

Also, 4 unit16_t variables were added for the controller system:
refAdcHotlid, adcValueHotlid, pwmValueHotlid and adcTamb. Thes variables
were obtained by adding some ADC inputs and PWM outputs. Note that these
variable are stored in the flash and sent via BLE.

The android app was changed a bit to display thes new 4 variables.

Finally, now are 2 PID temperature controllers. One for heating the
samples and another one for controling the temperature if the hotlid.

--- a/main_code_android/app/src/main/res/layout/activity_feature_template.xml
+++ b/main_code_android/app/src/main/res/layout/activity_feature_template.xml
@@ -342,6 +342,44 @@
 						tools:text="65" />
 				</LinearLayout>
 
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:orientation="horizontal">
+
+					<TextView
+						android:id="@+id/textViewCont7"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="24" />
+
+					<TextView
+						android:id="@+id/textViewCont4"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="768" />
+
+					<TextView
+						android:id="@+id/textViewCont5"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="770" />
+
+					<TextView
+						android:id="@+id/textViewCont6"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:gravity="center"
+						tools:text="65" />
+				</LinearLayout>
+
 				<androidx.appcompat.widget.AppCompatTextView
 					style="@style/Widget.ListTitle"
 					android:layout_width="match_parent"
